[package]
name = "rust_os"
version = "0.1.0"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>", "Philipp Oppermann <dev@phil-opp.com>"]
edition = "2024"
description = "My code for \"Writing an OS in Rust\", a blog series by Philipp Oppermann on OS development using Rust."
homepage = "https://os.phil-opp.com/"
repository = "https://github.com/0xdea/rust_os"
license = "MIT"
keywords = ["tutorial", "os", "bare-metal", "no-std"]
categories = ["no-std"]

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"

[[bin]]
name = "rust_os"
test = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
doc_markdown = "allow"

[lints.rust]
missing_docs = { level = "warn" }
