[package]
name = "rust_os"
version = "0.1.0"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>", "Philipp Oppermann <dev@phil-opp.com>"]
edition = "2024"
description = 'My code for "Writing an OS in Rust", a blog series by Philipp Oppermann on OS development using Rust.'
homepage = "https://os.phil-opp.com/"
repository = "https://github.com/0xdea/rust_os"
license = "MIT"
keywords = ["tutorial", "os", "bare-metal", "no-std"]
categories = ["no-std"]

[dependencies]
bootloader = "0.9"
volatile = "0.2"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
spin = "0.9"
x86_64 = "0.15"
uart_16550 = "0.3"
pic8259 = "0.11"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 30 # (in seconds)

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
doc_markdown = "allow"
multiple_crate_versions = "allow"

[lints.rust]
missing_docs = { level = "warn" }